--- a/shelter/css/main.css
+++ b/shelter/css/main.css
@@ -276,6 +276,20 @@ h3 {
     margin-top: 9px;
     margin-left: -1px;
 }
+#pets-button2 {
+    width: 178px;
+    border: 2px solid #F1CDB3;
+    background-color: #FAFAFA;
+    margin-top: 9px;
+    margin-left: -1px;
+}
+#pets-button3 {
+    width: 178px;
+    border: 2px solid #F1CDB3;
+    background-color: #FAFAFA;
+    margin-top: 9px;
+    margin-left: -1px;
+}
 #right-button {
     margin-left: 50px;
 }
@@ -301,13 +315,18 @@ h3 {
 }
 .help-content {
     display: flex;
-    align-items: center;
+    flex-direction: column;
     width: 1200px;
     height: 431px;
+    padding-left: 40px;
+    padding-right: 40px;
+    padding-top: 80px;
+    padding-bottom: 100px;
 }
 .help-title {
     width: 308px;
     height: 90px;
+    margin-left: 446px;
 }
 .help-title-text{
     font-family: Georgia;
@@ -320,4 +339,82 @@ h3 {
     margin-top: 0px;
     white-space: nowrap;
     text-indent: 0px;
+    text-indent: 60px;
+}
+.help-list {
+    display: flex;
+    flex-direction: column;
+    align-items: baseline;
+    flex-wrap: wrap;
+    width: 1200px;
+    padding-top: 60px;
+    padding-bottom: 100px;
+}
+.help-list-first {
+    display: flex;
+}
+.help-list-second {
+    display: flex;
+    width: 1200px;
+    padding-left: 172px;
+    padding-top: 29px;
+}
+#pet-item-1 {
+    margin-left: 89px;
+}
+.pet-icon-1 {
+    margin-left: 99px;
+}
+#pet-item-2 {
+    margin-left: 120.5px;
+}
+.pet-icon-2 {
+    margin-left: 162px;
+}
+#pet-item-3 {
+    margin-left: 121px;
+}
+.pet-icon-3 {
+    padding-left: 120px;
+}
+#pet-item-4 {
+    margin-left: 123px;
+}
+.pet-icon-4 {
+    padding-left: 167px;
+}
+#pet-item-5 {
+    margin-left: 123px;
+}
+.pet-icon-5 {
+    padding-left: 141px;
+}
+.pet-icon-6 {
+    padding-left: 12px;
+}
+.pet-icon-7 {
+    padding-left: 20px;
+}
+#pet-item-7 {
+    margin-left: 2px;
+}
+.pet-icon-8 {
+    padding-left: 49px;
+}
+#pet-item-8 {
+    margin-left: 2px;
+}
+.pet-icon-9 {
+    padding-left: 44px;
+}
+.pet-item {
+    margin-left: 120px;
+}
+h4 {
+    font-family: Georgia;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 23px;
+    letter-spacing: 1px;
+    text-align: center;
 }
