--- a/shelter/css/main.css
+++ b/shelter/css/main.css
@@ -1,3 +1,6 @@
+html {
+    scroll-behavior: smooth;
+}
 body {
     display: flex;
     flex-direction: column;
@@ -45,6 +48,9 @@ h1 {
     white-space: nowrap;
     color: #F1CDB3;
 }
+.logo-link {
+    text-decoration: none;
+}
 .navbar {
     display: flex;
     justify-content: space-between;
@@ -78,9 +84,13 @@ h1 {
     font-size: 15px;
     line-height: 24px;
 }
-a {
+.nav-link {
     text-decoration: none;
     color: #CDCDCD;
+    transition: color 0.3s;
+}
+.nav-link:hover {
+    color: #FAFAFA;
 }
 .start-screen {
     display: flex;
@@ -136,15 +146,20 @@ h2 {
     border: none;
     text-align: center;
     text-decoration: none;
-    font-size: 16px;
-  }
-.button {
     margin-top: -4px;
     font-family: Georgia;
     font-weight: 400;
     font-size: 17px;
     line-height: 22.1px;
     letter-spacing: 1px;
+    transition: background-color 0.3s;
+  }
+.button:hover {
+    background-color: #FDDCC4;
+}
+.button-text {
+    text-decoration: none;
+    color: #292929;
 }
 .about {
     height: 588px;
@@ -225,13 +240,18 @@ h3 {
     height: 435px;
     padding-top: 60px;
 }
-.buttor-arrow {
+.button-arrow {
     display: flex;
     width: 52px;
     height: 52px;
     border-radius: 100px;
+    background-color: #F6F6F6;
     border: 2px solid #F1CDB3;
     align-items: center;
+    transition: background-color 0.3s;
+}
+.button-arrow:hover {
+    background-color: #FDDCC4;
 }
 .arrow {
     margin-left: 19px;
@@ -265,26 +285,30 @@ h3 {
     margin-top: 5px;
     margin-left: 5px;
 }
-#pets-button {
+.card-button {
     width: 178px;
-    border: 2px solid #F1CDB3;
+    height: 52px;
     background-color: #FAFAFA;
+    border: 2px solid #F1CDB3;
+    border-radius: 100px;
+    text-align: center;
+    text-decoration: none;
+    font-size: 16px;
     margin-top: 9px;
     margin-left: -1px;
+    font-family: Georgia;
+    font-weight: 400;
+    font-size: 17px;
+    line-height: 22.1px;
+    letter-spacing: 1px;
+    transition: background-color 0.3s;
 }
-#pets-button2 {
-    width: 178px;
-    border: 2px solid #F1CDB3;
-    background-color: #FAFAFA;
-    margin-top: 9px;
-    margin-left: -1px;
+.pet-card:hover{
+    cursor: pointer;
 }
-#pets-button3 {
-    width: 178px;
-    border: 2px solid #F1CDB3;
-    background-color: #FAFAFA;
-    margin-top: 9px;
-    margin-left: -1px;
+.pet-card:hover .card-button{
+    cursor: pointer;
+    background-color: #FDDCC4;
 }
 #right-button {
     margin-left: 50px;
@@ -297,6 +321,11 @@ h3 {
     text-align: center;
     margin-left: 468px;
     margin-top: 60px;
+    transition: background-color 0.3s;
+}
+.button-pets:hover {
+    cursor: pointer;
+    background-color: #FDDCC4;
 }
 .button-pets-text {
     font-family: Georgia;
@@ -463,6 +492,9 @@ h5 {
     margin-top: 10px;
     color: #545454;
 }
+.card-link {
+    text-decoration: none;
+}
 .legal-info {
     width: 380px;
     height: 72px;
@@ -516,6 +548,7 @@ footer {
     line-height: 23px;
     color: #F1CDB3;
     margin: 0;
+    margin-top: -10px;
     margin-left: 20px;
 }
 .footer-puppy {
@@ -528,6 +561,15 @@ footer {
     align-items: center;
     margin-top: 40px;
 }
+.mail-link {
+    text-decoration: none;
+}
+.phone-link {
+    text-decoration: none;
+}
+.location-link{
+    text-decoration: none;
+}
 #location {
     width: 260px;
     height: 46px;
@@ -538,5 +580,6 @@ footer {
     margin-top: -10px;
 }
 #location-2 {
-    margin-top: -6px;
+    margin-left: 19px;
+    margin-top: -10px;
 }
