--- a/shelter/css/main.css
+++ b/shelter/css/main.css
@@ -267,7 +267,7 @@ h3 {
     align-items: center;
     flex-direction: column;
     width: 270px;
-    height: 435;
+    height: 435px;
     background-color: #FAFAFA;
 }
 #pet-card2 {
