--- a/shelter/css/main.css
+++ b/shelter/css/main.css
@@ -33,9 +33,10 @@ header {
     font-weight: 400;
     white-space: nowrap;
     font-size: 13px;
-    letter-spacing: 1.5px;
+    letter-spacing: 1.3px;
     color:#FFFFFF;
     margin-top: -14px;
+    margin-left: 4px;
 }
 h1 {
     width: 184px;
@@ -158,6 +159,12 @@ h2 {
     background-color: #FDDCC4;
 }
 .button-text {
+    text-decoration: none;
+    color: #292929;
+}
+.button-text-card {
+    margin-left: 4px;
+    margin-top: 15px;
     text-decoration: none;
     color: #292929;
 }
@@ -333,6 +340,8 @@ h3 {
     font-size: 17px;
     line-height: 22.1px;
     letter-spacing: 1px;
+    margin-top: 15px;
+    margin-left: 7px;
 }
 .help {
     height: 611px;
@@ -400,7 +409,7 @@ h3 {
     padding-left: 167px;
 }
 #pet-item-5 {
-    margin-left: 123px;
+    margin-left: 121px;
 }
 .pet-icon-5 {
     padding-left: 141px;
@@ -408,20 +417,29 @@ h3 {
 .pet-icon-6 {
     padding-left: 12px;
 }
+#pet-item-6 {
+    margin-top: 25px;
+}
 .pet-icon-7 {
     padding-left: 20px;
 }
 #pet-item-7 {
-    margin-left: 2px;
+    margin-top: 25px;
+    margin-left: 1px;
 }
 .pet-icon-8 {
-    padding-left: 49px;
+    padding-left: 52px;
 }
 #pet-item-8 {
+    margin-top: 25px;
     margin-left: 2px;
 }
 .pet-icon-9 {
     padding-left: 44px;
+}
+#pet-item-9 {
+    margin-top: 25px;
+    margin-left: 3px;
 }
 .pet-item {
     margin-left: 120px;
@@ -491,6 +509,7 @@ h5 {
     margin-left: 15px;
     margin-top: 10px;
     color: #545454;
+    letter-spacing: 1.25px;
 }
 .card-link {
     text-decoration: none;
@@ -546,9 +565,10 @@ footer {
     font-weight: 400;
     font-size: 20px;
     line-height: 23px;
+    letter-spacing: 1.3px;
     color: #F1CDB3;
     margin: 0;
-    margin-top: -10px;
+    margin-top: -4px;
     margin-left: 20px;
 }
 .footer-puppy {
@@ -560,6 +580,9 @@ footer {
     display: flex;
     align-items: center;
     margin-top: 40px;
+}
+.footer-icon-2 {
+    margin-top: -4px;
 }
 .mail-link {
     text-decoration: none;
@@ -573,8 +596,9 @@ footer {
 #location {
     width: 260px;
     height: 46px;
-    margin-left: 9px;
+    margin-left: 17px;
     margin-top: -5px;
+    text-indent: -15px;
 }
 .locatin-icon {
     margin-top: -10px;
