--- a/shelter/css/pets.css
+++ b/shelter/css/pets.css
@@ -32,9 +32,10 @@ header {
     font-weight: 400;
     white-space: nowrap;
     font-size: 13px;
-    letter-spacing: 1.5px;
+    letter-spacing: 1.3px;
     color:#292929;
     margin-top: -13px;
+    margin-left: 4px;
 }
 h1 {
     width: 184px;
@@ -178,6 +179,10 @@ h3 {
     line-height: 22.1px;
     letter-spacing: 1px;
     transition: background-color 0.3s;
+}
+.button-text {
+    margin-left: 4px;
+    margin-top: 15px;
 }
 .pet-card:hover{
     cursor: pointer;
@@ -338,9 +343,10 @@ footer {
     font-weight: 400;
     font-size: 20px;
     line-height: 23px;
+    letter-spacing: 1.3px;
     color: #F1CDB3;
     margin: 0;
-    margin-top: -10px;
+    margin-top: -4px;
     margin-left: 20px;
 }
 .footer-puppy {
@@ -352,6 +358,9 @@ footer {
     display: flex;
     align-items: center;
     margin-top: 40px;
+}
+.footer-icon-2 {
+    margin-top: -4px;
 }
 .mail-link {
     text-decoration: none;
@@ -365,8 +374,9 @@ footer {
 #location {
     width: 260px;
     height: 46px;
-    margin-left: 9px;
+    margin-left: 17px;
     margin-top: -5px;
+    text-indent: -15px;
 }
 .locatin-icon {
     margin-top: -10px;
