--- a/shelter/css/main.css
+++ b/shelter/css/main.css
@@ -142,6 +142,35 @@ h2 {
 .puppy_header {
     max-width: 100%;
 }
+.button {
+    width: 207px;
+    height: 52px;
+    background-color: #F1CDB3;
+    border-radius: 100px;
+    border: none;
+    text-align: center;
+    text-decoration: none;
+    margin-top: -4px;
+    font-family: Georgia;
+    font-weight: 400;
+    font-size: 17px;
+    line-height: 22.1px;
+    letter-spacing: 1px;
+    transition: background-color 0.3s;
+  }
+.button:hover {
+    background-color: #FDDCC4;
+}
+.button-text {
+    text-decoration: none;
+    color: #292929;
+}
+.button-text-card {
+    margin-left: 4px;
+    margin-top: 15px;
+    text-decoration: none;
+    color: #292929;
+}
 @media (max-width:1260px) {
     header {
         height: 1165px;
@@ -186,40 +215,12 @@ h2 {
     .button {
         margin-left: 128px;
     }
-
-}
-.button {
-    width: 207px;
-    height: 52px;
-    background-color: #F1CDB3;
-    border-radius: 100px;
-    border: none;
-    text-align: center;
-    text-decoration: none;
-    margin-top: -4px;
-    font-family: Georgia;
-    font-weight: 400;
-    font-size: 17px;
-    line-height: 22.1px;
-    letter-spacing: 1px;
-    transition: background-color 0.3s;
-  }
-.button:hover {
-    background-color: #FDDCC4;
-}
-.button-text {
-    text-decoration: none;
-    color: #292929;
-}
-.button-text-card {
-    margin-left: 4px;
-    margin-top: 15px;
-    text-decoration: none;
-    color: #292929;
 }
 .about {
-    height: 588px;
+    min-height: 588px;
+    max-height: 1048px;
     background-color: #FFFFFF;
+    background-size: cover;
 }
 .about-content {
     display: flex;
@@ -227,7 +228,6 @@ h2 {
     width: 1200px;
     height: 408px;
     margin-top: 80px;
-    margin-bottom: 100;
     margin-left: 40px;
     margin-right: 40px;
     padding-left: 175px;
@@ -236,7 +236,7 @@ h2 {
 .about-shelter {
     display: flex;
     flex-direction: column;
-    width: 430px;
+    min-width: 430px;
     height: 380px;
     padding-left: 120px;
 }
@@ -263,14 +263,39 @@ h3 {
 #about-subheading {
     margin-top: 0px;
 }
+@media (max-width:1260px) {
+    .about{
+        height: 1048px;
+    }
+    .about-content{
+        flex-direction: column-reverse;
+        width: auto;
+        height: auto;
+        margin-left: 0px;
+        margin-right: 0px;
+        padding-left: 0px;
+    }
+    .about-shelter {
+        padding-left: 0px;
+        margin-left: 169px;
+        padding-bottom: 80px;
+    }
+    .about-subheading {
+        width: auto;
+        max-width: 1200px;
+        min-width: 430px;
+        padding-right: 170px;
+    }
+}
 .pets {
-    height: 877px;
+    min-height: 877px;
     background-color: #F6F6F6;
 }
 .pets-content {
     display: flex;
     flex-direction: column;
-    width: 1200px;
+    justify-content: space-between;
+    max-width: 1200px;
     height: 877px;
     padding-top: 80px;
     padding-left: 40px;
@@ -292,14 +317,14 @@ h3 {
 .pets-slider {
     display: flex;
     align-items: center;
-    width: 1200px;
+    max-width: 1200px;
     height: 435px;
     padding-top: 60px;
 }
 .button-arrow {
     display: flex;
-    width: 52px;
-    height: 52px;
+    min-width: 52px;
+    min-height: 52px;
     border-radius: 100px;
     background-color: #F6F6F6;
     border: 2px solid #F1CDB3;
@@ -391,6 +416,41 @@ h3 {
     letter-spacing: 1px;
     margin-top: 15px;
     margin-left: 7px;
+}
+@media (max-width:1260px) {
+    .pets-title {
+        padding-left: 156.5px;
+        margin-top: 80px;
+    }
+    .pets-content {
+        justify-content: normal;
+        padding-left: 0px;
+        margin-left: 30px;
+        padding-top: 0px;
+    }
+    .pets-slider {
+        justify-content: space-between;
+        max-width: 1200px;
+        height: 435px;
+        margin-top: 60px;
+        padding-top: 0px;
+    }
+    .pet-cards {
+        margin-left: 9px;
+    }
+    #pet-card2 {
+        margin-left: 40px;
+    }
+    #pet-card3 {
+        display: none;
+    }
+    #right-button {
+        margin-left: 9px;
+        margin-right: 37px;
+    }
+    .button-pets {
+        margin-left: 220px;
+    }
 }
 .help {
     height: 611px;
