--- a/shelter/css/main.css
+++ b/shelter/css/main.css
@@ -109,6 +109,7 @@ h1 {
     max-width: 460px;
     height: 322px;
     padding-right: 40px;
+    margin-top: 164px;
 }
 .heading {
     display: flex;
@@ -196,6 +197,7 @@ h2 {
         margin-left: 153px;
         max-width: 1260px;
         padding-right: 145px;
+        margin-top: 0px;
     }
     .subheading {
         max-width: 1100px;
@@ -294,9 +296,7 @@ h3 {
 .pets-content {
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
     max-width: 1200px;
-    height: 877px;
     padding-top: 80px;
     padding-left: 40px;
 }
