--- a/shelter/css/main.css
+++ b/shelter/css/main.css
@@ -477,88 +477,39 @@ h3 {
 }
 .help-list {
     display: flex;
-    flex-direction: column;
-    align-items: baseline;
+    gap: 55px 120px;
     flex-wrap: wrap;
     width: 1200px;
     padding-top: 60px;
     padding-bottom: 100px;
-}
-.help-list-first {
-    display: flex;
-}
-.help-list-second {
-    display: flex;
-    width: 1200px;
-    padding-left: 172px;
-    padding-top: 29px;
-}
-#pet-item-1 {
-    margin-left: 89px;
-}
-.pet-icon-1 {
-    margin-left: 99px;
-}
-#pet-item-2 {
-    margin-left: 120.5px;
-}
-.pet-icon-2 {
-    margin-left: 162px;
-}
-#pet-item-3 {
-    margin-left: 121px;
-}
-.pet-icon-3 {
-    padding-left: 120px;
-}
-#pet-item-4 {
-    margin-left: 123px;
-}
-.pet-icon-4 {
-    padding-left: 167px;
-}
-#pet-item-5 {
-    margin-left: 121px;
-}
-.pet-icon-5 {
-    padding-left: 141px;
-}
-.pet-icon-6 {
-    padding-left: 12px;
+    margin-left: 87px;
 }
 #pet-item-6 {
-    margin-top: 25px;
+    margin-left: 84px;
 }
-.pet-icon-7 {
-    padding-left: 20px;
-}
-#pet-item-7 {
-    margin-top: 25px;
-    margin-left: 1px;
-}
-.pet-icon-8 {
-    padding-left: 52px;
-}
-#pet-item-8 {
-    margin-top: 25px;
-    margin-left: 2px;
-}
-.pet-icon-9 {
-    padding-left: 44px;
-}
-#pet-item-9 {
-    margin-top: 25px;
-    margin-left: 3px;
+.help-list:nth-child(6) {
+    margin-left: 84px;
 }
 .pet-item {
-    margin-left: 120px;
+    width: fit-content;
+    height: 113px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+#pet-item {
+    margin: 0;
+    padding: 0;
+}
+.pet-icon {
+    padding-bottom: 30px;
 }
 h4 {
     font-family: Georgia;
     font-weight: 400;
     font-size: 20px;
     line-height: 23px;
-    letter-spacing: 1px;
+    letter-spacing: 0.06em;
     text-align: center;
 }
 .donation {
