--- a/shelter/css/main.css
+++ b/shelter/css/main.css
@@ -786,9 +786,63 @@ h5 {
         min-width: 380px;
         padding-right: 200px;
     }
+    .donation-dog-block {
+        display: flex;
+        justify-content: flex-end;
+    }
     .donation-dog {
-        margin-left: -31px;
         margin-top: 50px;
+        padding-right: 132px;
+    }
+}
+@media (max-width:760px) {
+    .donation {
+        min-height: 542.2px;
+    }
+    .donation-content {
+        margin-left: 0px;
+        padding-top: 0px;
+    }
+    .donation-content-block {
+        margin-top: 41.5px;
+        margin-left: 40px;
+    }
+    .donatin-bank {
+        margin: 0;
+        padding: 0;
+        margin-left: -17px;
+        margin-top: -2px;
+        letter-spacing: 0.0em;
+    }
+    .donation-tittle {
+        width: 220px;
+        font-size: 25px;
+        line-height: 32.5px;
+        letter-spacing: 0.06em;
+        margin-top: 0px;
+    }
+    .credit-card {
+        width: 281px;
+        height: 43px;
+        margin-left: -20px;
+        margin-top: 24px;
+    }
+    #card-number {
+        font-size: 15px;
+        line-height: 16.5px;
+        letter-spacing: 0.06em;
+        margin-top: 13px;
+    }
+    .legal-info {
+        min-width: 280px;
+        margin-left: -20px;
+        text-align: justify;
+    }
+    .donation-dog {
+        width: 260px;
+        height: 135.2px;
+        margin-top: 29px;
+        padding-right: 30px;
     }
 }
 footer {
@@ -886,8 +940,70 @@ footer {
     .footer-location {
         margin-left: 60px;
     }
+    #contacts > div > div.footer-contacts > div:nth-child(3) > a.phone-link {
+        margin-top: -5px;
+    }
+    #location {
+        margin-top: -7px;
+    }
+    .footer-puppy-block {
+        display: flex;
+        justify-content: flex-end;
+        width: 1200px;
+    }
     .footer-puppy {
         margin-top: 51px;
-        margin-left: 170px;
+        padding-right: 234px;
+    }
+}
+@media (max-width:760px) {
+    footer {
+        min-height: 809px;
+    }
+    .footer-content {
+        margin-left: 0px;
+    }
+    #contacts > div > div.footer-contacts > div.footer-title > h3 > br {
+        display: none;
+    }
+    #contacts > div > div.footer-contacts > div.footer-title {
+        margin-left: -25px;
+    }
+    .footer-contacts {
+        margin-left: 35px;
+    }
+    #contacts > div > div.footer-location > div.footer-title > h3 > br {
+        display: none;
+    }
+    #contacts > div > div.footer-location > div.footer-title > h3 {
+        margin-top: -3px;
+        margin-left: 20px;
+    }
+    .footer-location {
+        margin-left: 0px;
+    }
+    #contacts > div > div.footer-location > div:nth-child(2) {
+        margin-left: 10px;
+        margin-top: 46.6px;
+    }
+    #contacts > div > div.footer-location > div:nth-child(3) {
+        margin-left: 10px;
+        margin-top: 46.6px;
+    }
+    #contacts > div > div.footer-contacts > div:nth-child(3) > a:nth-child(1) > svg {
+        margin-left: 5px;
+    }
+    .footer-title-text {
+        width: 278px;
+        font-size: 25px;
+        line-height: 32.5px;
+        letter-spacing: 0.06em;
+        text-align: center;
+    }
+    .footer-puppy {
+        width: 260px;
+        height: 269px;
+        margin-top: 16px;
+        margin-left: 29px;
     }
 }
