--- a/shelter/css/pets.css
+++ b/shelter/css/pets.css
@@ -4,7 +4,7 @@ html {
 body {
     display: flex;
     flex-direction: column;
-    width: 1280px;
+    max-width: 1280px;
     margin: auto;
 }
 header {
@@ -12,7 +12,8 @@ header {
 }
 .container {
     display: flex;
-    width: 1200px;
+    justify-content: space-between;
+    max-width: 1200px;
     height: 60px;
     margin-top: 10px;
     margin-bottom: 818;
@@ -92,6 +93,41 @@ h1 {
 .nav-link:hover {
     color: #292929;
 }
+.burger {
+    display: none;
+    margin-top: 20px;
+    margin-left: 66px;
+}
+@media (max-width:1260px) {
+    .logo {
+        margin-left: -10px;
+    }
+    .navbar {
+        padding-left: 0px;
+        margin-left: 81px;
+    }
+    body > header > div > div.navbar > p:nth-child(4) {
+        margin-right: -10px;
+    }
+}
+@media (max-width:767px) {
+    .logo {
+        margin-left: -20px;
+    }
+    .nav-item {
+        display: none;
+    }
+    .inactive-item {
+        display: none;
+    }
+    .navbar {
+        justify-content: flex-end;
+    }
+    .burger {
+        display: block;
+        margin-left: -15px;
+    }
+}
 .pets {
     height: 1342px;
     background-color: #F6F6F6;
@@ -129,7 +165,7 @@ h3 {
 .cards-container {
     display: flex;
     flex-wrap: wrap;
-    width: 1200px;
+    max-width: 1200px;
     height: 930px;
     margin-top: 45px;
     margin-left: 40px;
@@ -303,14 +339,98 @@ h3 {
 #arrow-active-margin-2 {
     margin-left: 13px;
 }
+@media (max-width:1260px) {
+    .pets {
+        height: 1733px;
+    }
+    .pets-title {
+        padding-left: 145px;
+    }
+    .cards-container {
+        gap: 30px 40px;
+        margin-top: 29px;
+        margin-left: 93px;
+    }
+    .pet-card { 
+        margin-top: 0px;
+    }
+    .pet-card-margin {
+        margin-top: 0px;
+        margin-left: 0px;
+    }
+    body > div.pets > div.cards-container > div:nth-child(7) {
+        display: none;
+    }
+    body > div.pets > div.cards-container > div:nth-child(8) {
+        display: none;
+    }
+
+}
+@media (max-width:982px) {
+    .navigation {
+        margin-top: 474px;
+        margin-left: 215px;
+    }
+}
+@media (max-width:767px) {
+    .pets {
+        height: 1649px;
+    }
+    .pets-content {
+        margin-top: 0px;
+        margin-left: 0px;
+    }
+    .pets-title {
+        padding-left: 0px;
+        margin-top: 43px;
+        margin-left: -25px;
+    }
+    #pets-title-text {
+        font-size: 25px;
+        line-height: 32.5px;
+        letter-spacing: 0.06em;
+        text-indent: 5px;
+    }
+    .cards-container {
+        gap: 30px 40px;
+        margin-top: 16px;
+        margin-left: 23px;
+    }
+    body > div.pets > div.cards-container > div:nth-child(4) {
+        display: none;
+    }
+    body > div.pets > div.cards-container > div:nth-child(5) {
+        display: none;
+    }
+    body > div.pets > div.cards-container > div:nth-child(6) {
+        display: none;
+    }
+    .navigation {
+        margin-left: 7px;
+    }
+    #button-arrow-inactive-margin {
+        margin-left: 10px;
+    }
+    body > div.pets > div.navigation > div.button-number {
+        margin-left: 10px;
+    }
+    body > div.pets > div.navigation > div:nth-child(4) {
+        margin-left: 10px;
+    }
+    body > div.pets > div.navigation > div:nth-child(5) {
+        margin-left: 10px;
+    }
+}
 footer {
-    height: 350px;
+    min-height: 350px;
+    max-height: 639px;
     background: url('../assets/img/footer_background.png') no-repeat center;
+    background-size: cover;
 }
 .footer-content {
     display: flex;
     flex-wrap: wrap;
-    width: 1200px;
+    max-width: 1200px;
     height: 310px;
     margin-top: 40px;
     margin-left: 40px;
@@ -385,11 +505,81 @@ footer {
     margin-left: 19px;
     margin-top: -10px;
 }
-h4 {
-    font-family: Georgia;
-    font-weight: 400;
-    font-size: 20px;
-    line-height: 23px;
-    letter-spacing: 1px;
-    text-align: center;
+@media (max-width:1260px) {
+    footer {
+        height: 639px;
+    }
+    .footer-content {
+        margin-top: 15px;
+        margin-left: 64px;
+    }
+    .footer-location {
+        margin-left: 60px;
+    }
+    #contacts > div > div.footer-contacts > div:nth-child(3) > a.phone-link {
+        margin-top: -5px;
+    }
+    #location {
+        margin-top: -7px;
+    }
+    .footer-puppy-block {
+        display: flex;
+        justify-content: flex-end;
+        width: 1200px;
+    }
+    .footer-puppy {
+        margin-top: 51px;
+        padding-right: 234px;
+    }
+}
+@media (max-width:760px) {
+    footer {
+        min-height: 809px;
+    }
+    .footer-content {
+        margin-left: 0px;
+    }
+    #contacts > div > div.footer-contacts > div.footer-title > h3 > br {
+        display: none;
+    }
+    #contacts > div > div.footer-contacts > div.footer-title {
+        margin-left: -25px;
+    }
+    .footer-contacts {
+        margin-left: 35px;
+    }
+    #contacts > div > div.footer-location > div.footer-title > h3 > br {
+        display: none;
+    }
+    #contacts > div > div.footer-location > div.footer-title > h3 {
+        margin-top: -3px;
+        margin-left: 20px;
+    }
+    .footer-location {
+        margin-left: 0px;
+    }
+    #contacts > div > div.footer-location > div:nth-child(2) {
+        margin-left: 10px;
+        margin-top: 46.6px;
+    }
+    #contacts > div > div.footer-location > div:nth-child(3) {
+        margin-left: 10px;
+        margin-top: 46.6px;
+    }
+    #contacts > div > div.footer-contacts > div:nth-child(3) > a:nth-child(1) > svg {
+        margin-left: 5px;
+    }
+    .footer-title-text {
+        width: 278px;
+        font-size: 25px;
+        line-height: 32.5px;
+        letter-spacing: 0.06em;
+        text-align: center;
+    }
+    .footer-puppy {
+        width: 260px;
+        height: 269px;
+        margin-top: 16px;
+        margin-left: 29px;
+    }
 }
