--- a/shelter/css/pets.css
+++ b/shelter/css/pets.css
@@ -396,15 +396,6 @@ h3 {
         margin-top: 16px;
         margin-left: 23px;
     }
-    body > div.pets > div.cards-container > div:nth-child(4) {
-        display: none;
-    }
-    body > div.pets > div.cards-container > div:nth-child(5) {
-        display: none;
-    }
-    body > div.pets > div.cards-container > div:nth-child(6) {
-        display: none;
-    }
     .navigation {
         margin-left: 7px;
     }
@@ -419,6 +410,17 @@ h3 {
     }
     body > div.pets > div.navigation > div:nth-child(5) {
         margin-left: 10px;
+    }
+}
+@media (max-width:602px) { 
+    body > div.pets > div.cards-container > div:nth-child(4) {
+        display: none;
+    }
+    body > div.pets > div.cards-container > div:nth-child(5) {
+        display: none;
+    }
+    body > div.pets > div.cards-container > div:nth-child(6) {
+        display: none;
     }
 }
 footer {
@@ -494,9 +496,8 @@ footer {
 #location {
     width: 260px;
     height: 46px;
-    margin-left: 17px;
-    margin-top: -5px;
-    text-indent: -15px;
+    margin-left: 19px;
+    margin-top: -6px;
 }
 .locatin-icon {
     margin-top: -10px;
@@ -543,10 +544,13 @@ footer {
         display: none;
     }
     #contacts > div > div.footer-contacts > div.footer-title {
-        margin-left: -25px;
+        margin-left: -15px;
     }
     .footer-contacts {
         margin-left: 35px;
+    }
+    #contacts > div > div.footer-contacts > div:nth-child(2) {
+        margin-top: 15px;
     }
     #contacts > div > div.footer-location > div.footer-title > h3 > br {
         display: none;
@@ -560,7 +564,7 @@ footer {
     }
     #contacts > div > div.footer-location > div:nth-child(2) {
         margin-left: 10px;
-        margin-top: 46.6px;
+        margin-top: 20px;
     }
     #contacts > div > div.footer-location > div:nth-child(3) {
         margin-left: 10px;
