--- a/shelter/css/main.css
+++ b/shelter/css/main.css
@@ -98,6 +98,86 @@ h1 {
     margin-top: 20px;
     margin-left: 66px;
 }
+.burger-button {
+    position: relative;
+    z-index: 300;
+}
+.burger-button.active {
+    z-index: 300;
+    transform: rotate(-90deg);
+    transition: 1s;
+}
+.burger-button-line {
+    width: 30px;
+    height: 3px;
+    background-color: #F1CDB3;
+}
+#burger-button-line-2 {
+    margin-top: 7px;
+}
+#burger-button-line-3 {
+    margin-top: 7px;
+}
+.burger-content {
+    position: absolute;
+    top: 0;
+    right: 0;
+    z-index: 150;
+    max-width: 0px;
+    height: 100%;
+    background-color: #292929;
+    overflow: hidden;
+    transition: all 1s;
+}
+.burger-navbar {
+    width: 243px;
+    height: 327px;  
+    margin-top: 248px;
+    margin-left: 39px;
+}
+.about-item-burger {
+    font-family: Arial;
+    font-weight: 400;
+    font-size: 32px;
+    line-height: 51.2px;
+    color: #FAFAFA;
+    text-decoration: underline;
+    text-decoration-color: #F1CDB3;
+    text-decoration-thickness: 3px;
+    text-underline-offset: 16px;
+}
+.nav-item-burger {
+    font-family: Arial;
+    font-weight: 400;
+    font-size: 32px;
+    line-height: 51.2px;
+    color: #CDCDCD;
+}
+#nav-item-burger-1 {
+    margin-top: 44px;
+    margin-left: 60px;
+}
+#nav-item-burger-2 {
+    margin-top: 40px;
+    margin-left: 9px;
+}
+#nav-item-burger-3 {
+    margin-top: 40px;
+    margin-left: 59px;
+}
+.burger-overlay {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #000;
+    opacity: 0.3;
+}
+.burger-overlay.active {
+    display: block;
+}
 .start-screen {
     display: flex;
     max-width: 1200px;
@@ -347,6 +427,9 @@ h3 {
     }
 }
 @media (max-width:760px) {
+    body.noscroll {
+        overflow: hidden;
+    }
     .about {
         height: 974px;
     }
