--- a/shelter/css/pets.css
+++ b/shelter/css/pets.css
@@ -98,6 +98,87 @@ h1 {
     margin-top: 20px;
     margin-left: 66px;
 }
+.burger-button {
+    position: relative;
+    z-index: 300;
+}
+.burger-button.active {
+    z-index: 300;
+    transform: rotate(-90deg);
+    transition: 1s;
+}
+.burger-button-line {
+    width: 30px;
+    height: 3px;
+    background-color: #000000;
+}
+#burger-button-line-2 {
+    margin-top: 7px;
+}
+#burger-button-line-3 {
+    margin-top: 7px;
+}
+.burger-content {
+    position: absolute;
+    top: 0;
+    right: 0;
+    z-index: 150;
+    max-width: 0px;
+    height: 100%;
+    background-color: #FFFFFF;
+    overflow: hidden;
+    transition: all 1s;
+}
+.burger-navbar {
+    width: 243px;
+    height: 327px;  
+    margin-top: 248px;
+    margin-left: 39px;
+}
+.inactive-item-burger {
+    font-family: Arial;
+    font-weight: 400;
+    font-size: 32px;
+    line-height: 51.2px;
+    color: #CDCDCD;
+    text-decoration: underline;
+    text-decoration-color: #F1CDB3;
+    text-decoration-thickness: 3px;
+    text-underline-offset: 16px;
+    text-align: center;
+}
+.nav-item-burger {
+    font-family: Arial;
+    font-weight: 400;
+    font-size: 32px;
+    line-height: 51.2px;
+    color: #CDCDCD;
+}
+#nav-item-burger-1 {
+    margin-top: 44px;
+    margin-left: -10px;
+}
+#nav-item-burger-2 {
+    margin-top: 40px;
+    margin-left: 9px;
+}
+#nav-item-burger-3 {
+    margin-top: 40px;
+    margin-left: 59px;
+}
+.burger-overlay {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #000;
+    opacity: 0.3;
+}
+.burger-overlay.active {
+    display: block;
+}
 @media (max-width:1260px) {
     .logo {
         margin-left: -10px;
@@ -111,6 +192,9 @@ h1 {
     }
 }
 @media (max-width:767px) {
+    body.noscroll {
+        overflow: hidden;
+    }
     .logo {
         margin-left: -20px;
     }
@@ -133,7 +217,7 @@ h1 {
     background-color: #F6F6F6;
 }
 .pets-content {
-    width: 1200px;
+    max-width: 1200px;
     margin-top: 80px;
     margin-left: 40px;
 }
@@ -373,6 +457,9 @@ h3 {
     }
 }
 @media (max-width:767px) {
+    h3 {
+        width: 320px;
+    }
     .pets {
         height: 1649px;
     }
@@ -381,9 +468,9 @@ h3 {
         margin-left: 0px;
     }
     .pets-title {
+        max-width: 320px;
         padding-left: 0px;
         margin-top: 43px;
-        margin-left: -25px;
     }
     #pets-title-text {
         font-size: 25px;
@@ -580,10 +667,15 @@ footer {
         letter-spacing: 0.06em;
         text-align: center;
     }
+    .footer-puppy-block {
+        min-width: 320px;
+    }
     .footer-puppy {
         width: 260px;
         height: 269px;
         margin-top: 16px;
         margin-left: 29px;
+        padding-right: 0px;
+        margin-right: 30px;
     }
 }
