--- a/shelter/css/main.css
+++ b/shelter/css/main.css
@@ -486,12 +486,38 @@ h3 {
     letter-spacing: 2px;
     white-space: nowrap;
 }
+.carousel-content {
+    display: flex;
+    align-items: center;
+}
+.carousel {
+    overflow: hidden;
+}
 .pets-slider {
     display: flex;
     align-items: center;
+    flex-wrap: nowrap;
     max-width: 1200px;
     height: 435px;
     padding-top: 60px;
+    position: relative;
+    left: -1127px;
+}
+@keyframes right-click {
+    from {left: -1127px}
+    to {left: -2254px;}
+}
+.animation-right-click {
+    animation-name: right-click;
+    animation-duration: 4s;
+}
+@keyframes left-click {
+    from {left: -1127px}
+    to {left: 0px;}
+}
+.animation-left-click {
+    animation-name: left-click;
+    animation-duration: 4s;
 }
 .button-arrow {
     display: flex;
@@ -502,6 +528,7 @@ h3 {
     border: 2px solid #F1CDB3;
     align-items: center;
     transition: background-color 0.3s;
+    margin-top: 60px;
 }
 .button-arrow:hover {
     background-color: #FDDCC4;
@@ -509,11 +536,26 @@ h3 {
 .arrow {
     margin-left: 19px;
 }
-.pet-cards {
+.pet-cards-left {
     display: flex;
     flex-direction: row;
     height: 435px;
     margin-left: 50px;
+    gap: 89px;
+}
+.pet-cards-mid {
+    display: flex;
+    flex-direction: row;
+    height: 435px;
+    margin-left: 139px;
+    gap: 89px;
+}
+.pet-cards-right {
+    display: flex;
+    flex-direction: row;
+    height: 435px;
+    margin-left: 139px;
+    gap: 89px;
 }
 .pet-card {
     display: flex;
@@ -522,12 +564,6 @@ h3 {
     width: 270px;
     height: 435px;
     background-color: #FAFAFA;
-}
-#pet-card2 {
-    margin-left: 90px;
-}
-#pet-card3 {
-    margin-left: 90px;
 }
 .pet-name{
     font-family: Georgia;
@@ -583,6 +619,11 @@ h3 {
 .button-pets:hover {
     background-color: #FDDCC4;
 }
+.pet-picture {
+    object-fit: cover;
+    width: 270px;
+    height: 270px;
+}
 .button-pets-text {
     font-family: Georgia;
     font-weight: 400;
@@ -609,6 +650,38 @@ h3 {
         height: 435px;
         margin-top: 60px;
         padding-top: 0px;
+        left: -800px;
+    }
+    #carousel > div > div.pet-cards-left > div:nth-child(3) {
+        display: none;
+    }
+    #carousel > div > div.pet-cards-mid > div:nth-child(3) {
+        display: none;
+    }
+    #carousel > div > div.pet-cards-right > div:nth-child(3) {
+        display: none;
+    }
+    @keyframes left-click {
+        from {left: -800px}
+        to {left: 0px;}
+    }
+    @keyframes right-click {
+        from {left: -800px}
+        to {left: -1600px;}
+    } 
+
+    .pet-cards-left {
+        margin-left: 0px;
+        margin-right: 135px;
+        gap: 36px;
+    }
+    .pet-cards-mid {
+        margin-left: 105px;
+        gap: 36px;
+    }
+    .pet-cards-right {
+        margin-left: 225px;
+        gap: 36px;
     }
     .pet-cards {
         margin-left: 9px;
@@ -627,8 +700,17 @@ h3 {
         margin-left: 220px;
     }
 }
-@media (max-width:760px) {
+@media (max-width:767px) {
     #pet-card2 {
+        display: none;
+    }
+    #carousel > div > div.pet-cards-left > div:nth-child(2) {
+        display: none;
+    }
+    #carousel > div > div.pet-cards-mid > div:nth-child(2) {
+        display: none;
+    }
+    #carousel > div > div.pet-cards-right > div:nth-child(2) {
         display: none;
     }
 }
@@ -663,12 +745,37 @@ h3 {
 
     }
     #left-button {
-        margin-left: 30px;
-        order: 1;
-        margin-bottom: -51px;
+        /* margin-top: 470px; */
+        margin-left: 66px;
+        position: absolute;
+        bottom: -1547px;
+    }
+    .button-arrow {
+        margin-top: 0px;
     }
     #right-button {
-        margin-bottom: -52px;
+        margin-top: 471px;
+        margin-right: 66px;
+        position: absolute;
+        bottom: -1547px;
+        left: 190px;
+    }
+    .pets-slider {
+        left: -400px;
+    }
+    #carousel > div > div.pet-cards-mid {
+        position: relative;
+        top: 400px;
+        left: 400px;
+    }
+    #carousel > div > div.pet-cards-left {
+        position: relative;
+        left: 0;
+        top: 0;
+    }
+    #carousel > div > div.pet-cards-right {
+        position: relative;
+        right: 0;
     }
     .button-pets {
         margin-top: 90px;
