--- a/shelter/css/main.css
+++ b/shelter/css/main.css
@@ -1203,3 +1203,99 @@ footer {
         padding-right: 0px;
     }
 }
+
+.popup {
+    display: none;
+    position: absolute;
+    top: 107%;
+    left: 33%;
+    z-index: 200;
+}
+.popup-active {
+    display: block;
+    position: absolute;
+    top: 170%;
+    left: 27%;
+    z-index: 100;
+}
+.popup-card {
+    display: flex;
+    width: 900px;
+    height: 500px;
+    background-color: #FAFAFA;
+    border-radius: 1%;
+}
+.popup-pet-picture {
+    width: 500px;
+    height: 500px;
+}
+.popup-logo-title {
+    width: 145px;
+    height: 45px;
+    margin-top: 50px;
+    margin-left: 30px;
+}
+.popup-logo-subtitle {
+    font-family: Georgia;
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 23px;
+    margin-top: 10px;
+    margin-left: 30px;
+    letter-spacing: 0.06em;
+}
+.popup-description {
+    margin-top: 40px;
+    margin-left: 30px;
+}
+.popup-description-text {
+    font-family: Georgia;
+    font-weight: 400;
+    font-size: 15px;
+    line-height: 16.5px;
+    letter-spacing: 0.09em;
+}
+.popup-list {
+    margin-top: 42px;
+    margin-left: 6px;   
+}
+li::marker {
+    color: #F1CDB3;
+  }
+
+.popup-overlay {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #000;
+    opacity: 0.3;
+    z-index: 10;
+}
+.popup-overlay.active {
+    display: block;
+}
+body.noscroll {
+    overflow: hidden;
+}
+.close-button {
+    display: flex;
+    width: 52px;
+    height: 52px;
+    border-radius: 100px;
+    border: 2px solid #F1CDB3;
+    align-items: center;
+    margin-left: 900px;
+    transition: background-color 0.3s;
+}
+
+.close-button:hover {
+    cursor: pointer;
+    background-color: #FDDCC4;
+}
+#friend > div > div.carousel-content > div.popup-active > div.close-button > svg {
+    margin-left: 20px;
+    margin-top: 1px;
+}
