--- a/audio-player/style.css
+++ b/audio-player/style.css
@@ -1,6 +1,7 @@
 .audio-player {
     width: 300px;
     height: 200px;
+    border: 3px solid black;
 }
 .start {
     display: block;
@@ -13,19 +14,23 @@
     width: 30px;
     height: 30px;
 }
+#backward {
+    width: 30px;
+    height: 30px;
+}
+#forward {
+    width: 30px;
+    height: 30px;
+}
 .stop {
     display: none;
 }
 .song-number {
     display: none;
 }
-.bar {
-    height: 10px;
-    background-color: #ccc;
-    margin-top: 10px;
-}
-.progress-bar {
-    width: 0;
-    height: 100%;
-    background-color: blue;
+#controls {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 20px;
 }
