--- a/random-game/style.css
+++ b/random-game/style.css
@@ -1,5 +1,10 @@
+.container{
+    width: 80%; 
+    margin: 0 auto;
+}
 .main-screen{
-    width: 800px; 
+    width: 60%; 
+    margin: 0 auto;
     height: 600px; 
     border: 1px solid black;
 }
